// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <span
    class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
    data-slot="avatar"
  >
    <span
      class="bg-muted flex size-full items-center justify-center rounded-full"
      data-slot="avatar-fallback"
    >
      CN
    </span>
  </span>
</div>
`;

exports[`Avatar stories snapshot > Desktop story renders and matches snapshot 1`] = `
<div>
  <span
    class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
    data-slot="avatar"
  >
    <span
      class="bg-muted flex size-full items-center justify-center rounded-full"
      data-slot="avatar-fallback"
    >
      CN
    </span>
  </span>
</div>
`;

exports[`Avatar stories snapshot > FallbackOnly story renders and matches snapshot 1`] = `
<div>
  <span
    class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
    data-slot="avatar"
  >
    <span
      class="bg-muted flex size-full items-center justify-center rounded-full"
      data-slot="avatar-fallback"
    >
      AB
    </span>
  </span>
</div>
`;

exports[`Avatar stories snapshot > Group story renders and matches snapshot 1`] = `
<div>
  <div
    class="flex -space-x-2"
  >
    <span
      class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
      data-slot="avatar"
    >
      <span
        class="bg-muted flex size-full items-center justify-center rounded-full"
        data-slot="avatar-fallback"
      >
        U1
      </span>
    </span>
    <span
      class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
      data-slot="avatar"
    >
      <span
        class="bg-muted flex size-full items-center justify-center rounded-full"
        data-slot="avatar-fallback"
      >
        U2
      </span>
    </span>
    <span
      class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
      data-slot="avatar"
    >
      <span
        class="bg-muted flex size-full items-center justify-center rounded-full"
        data-slot="avatar-fallback"
      >
        U3
      </span>
    </span>
  </div>
</div>
`;

exports[`Avatar stories snapshot > Large story renders and matches snapshot 1`] = `
<div>
  <span
    class="relative flex shrink-0 overflow-hidden rounded-full size-16"
    data-slot="avatar"
  >
    <span
      class="bg-muted flex size-full items-center justify-center rounded-full"
      data-slot="avatar-fallback"
    >
      CN
    </span>
  </span>
</div>
`;

exports[`Avatar stories snapshot > Mobile story renders and matches snapshot 1`] = `
<div>
  <span
    class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
    data-slot="avatar"
  >
    <span
      class="bg-muted flex size-full items-center justify-center rounded-full"
      data-slot="avatar-fallback"
    >
      CN
    </span>
  </span>
</div>
`;

exports[`Avatar stories snapshot > Tablet story renders and matches snapshot 1`] = `
<div>
  <span
    class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
    data-slot="avatar"
  >
    <span
      class="bg-muted flex size-full items-center justify-center rounded-full"
      data-slot="avatar-fallback"
    >
      CN
    </span>
  </span>
</div>
`;

exports[`Avatar stories snapshot > WithFallback story renders and matches snapshot 1`] = `
<div>
  <span
    class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
    data-slot="avatar"
  >
    <span
      class="bg-muted flex size-full items-center justify-center rounded-full"
      data-slot="avatar-fallback"
    >
      JD
    </span>
  </span>
</div>
`;
